--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 90vh;
   background-color: #555563;
 }
 
@@ -39,11 +39,22 @@
 .title a:hover, .title a:focus, .title a:active {
   text-decoration: underline;
 }
+.nbQuate{
+  color: gold;
+  font-size: 18px;
+  margin-bottom: -10px;
+  margin-left: 50px;
+}
+.displayQuete{
+  margin-left: -35%;
+  margin-top: -5%;
+  display: none;
+}
 
 
 @media (min-width: 1200px) { 
   .title {
-    font-size: 7rem;
+    font-size: 6rem;
   }
   .btn{
     width: 40%;
@@ -56,4 +67,7 @@
   .btn{
     width: 30%;
   }
+  .displayQuete{
+  margin-top: -2%;
+}
 }
