--- a/frontend/styles/Solo.module.css
+++ b/frontend/styles/Solo.module.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: auto;
-    min-height: 100vh;
+    min-height: 90vh;
     background-color: #555563;
 }
 
@@ -13,7 +13,6 @@
     font-size: 4rem;
     color: white;
     margin-bottom: -20px;
-    margin-top: -2%;
     cursor: default;
 }
 .btn{
@@ -56,8 +55,17 @@
     flex-wrap: wrap;
     height: auto;
     width: 70%;
-    /* margin-top: -30px; */
 }
+.ListContainerLast{
+    justify-content: center;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    height: auto;
+    width: 70%;
+    margin-bottom: 80px;
+}
+
 
 @media (min-width: 700px) { 
     .ListContainer{
