--- a/frontend/styles/Quest.module.css
+++ b/frontend/styles/Quest.module.css
@@ -7,7 +7,7 @@
   justify-content: center;
   flex-direction: column;
   color: white;
-  margin-bottom: 50px;
+  padding-bottom: 50px;
 }
 .quest{
   background-color: white;
