--- a/frontend/styles/lobby.module.css
+++ b/frontend/styles/lobby.module.css
@@ -1,21 +1,55 @@
 .container {
   background-color: #555563;
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
+  min-height: 90vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  overflow: scroll;
+  padding: 5px;
+  padding-bottom: 5rem;
 }
 
-.welcome {
+.container h1 {
   color: white;
-  font-size: 2.5rem;
+  font-size: 2rem;
+  margin-bottom: -10px;
+  text-align: center;
 }
+
+.container p {
+  color: #fff;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.info{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+
+}
+
+.info p{
+  font-size: 1rem;
+  color:#fff;
+}
+
+.ajout {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 .button {
-  width: 20%;
-  padding: 2%;
-  margin: 2%;
+  width: 30%;
+  padding: 1%;
+  margin: 1%;
+  font-size: 1rem;
   border-radius: 20px;
   box-shadow: 15px 15px 45px 1px rgba(0, 0, 0, 0.82);
   -webkit-box-shadow: 15px 15px 45px 1px rgba(0, 0, 0, 0.82);
@@ -25,9 +59,38 @@
   cursor: pointer;
 }
 
+.tableau {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .players_container{
-  width: 80vh;
-  height: 60vh;
+  width: 30%;
+  height: 20rem;
+  margin: 1%;
   border-radius: 20px;
   background-color: white;
+}
+
+.players_container p {
+  color:#555563;
+  font-size: 15px;
+}
+
+.round_container{
+  width: 30%;
+  height: 20rem;
+  margin: 1%;
+  border-radius: 20px;
+  background-color: white;
+}
+
+.round_container p {
+  color:#555563;
+  font-size: 15px;
 }
