Fin des pages shop et personnalisation

--- a/frontend/styles/Shop.module.css
+++ b/frontend/styles/Shop.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 90vh;
+    height: auto;
     min-height: 90vh;
     background-color: #555563;
 }
@@ -29,13 +29,12 @@
 .layout {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
     align-items: center;
     width: 95%;
     height: 90%;
     padding: 2%;
     gap: 10px;
-    background-color: aqua;
 }
 
 .layout span {
@@ -43,17 +42,39 @@
     font-size: 13px;
 }
 
+.layout .KPbox {
+    position: absolute;
+    top: 10vh;
+    right: 0;
+    margin: 10px;
+    padding: 5px;
+    background-color: #dadada;
+    color: #000;
+    font-size: 15px;
+}
+
 .skins {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    flex-wrap: wrap;
+    justify-content:space-between;
     text-align: center;
     width: 95%;
     height: 70%;
     gap: 10px;
-    background-color: yellow;
-    overflow: scroll;
+}
+
+.categories {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border: solid, 1px, #fff;
+    background-color: #cccccb;
+    width: 100%;
+    height: 50%;
+    gap: 10px;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 .item {
@@ -72,8 +93,34 @@
 }
 
 .KPstore {
+    background-color: #cccccb;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
-    height: 10%;
+    width: 95%;
+    height: 60px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
+.KPitem {
+    background-color: #E3505A;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 150px;
+}
+
+.KP {
+    font-size: 3rem;
+    font-weight: 800;
+}
+
+.panier {
+    font-size: 15px;
+    padding-bottom: 50px;
 }
