--- a/frontend/styles/Custom.module.css
+++ b/frontend/styles/Custom.module.css
@@ -52,10 +52,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .imgPerso {
-    width: 200px;
+    width: 75%;
+    max-height: 500px;
+    object-fit: contain;
 }
 
 .tete {
