Lobby à plusieurs et lancement de partie = fonctionnels

--- a/frontend/styles/Shop.module.css
+++ b/frontend/styles/Shop.module.css
@@ -106,7 +106,7 @@
 }
 
 .KPitem {
-    background-color: #E3505A;
+    background-color: #FF9809;
     display: flex;
     flex-direction: column;
     justify-content: center;
