--- a/frontend/styles/Settings.module.css
+++ b/frontend/styles/Settings.module.css
@@ -166,18 +166,54 @@
   font-size: 30px;
 }
 
-  
-  @media (min-width: 700px) { 
-    .title {
-      font-size: 6rem;
-    }
-    .btn{
-      width: 40%;
-      margin-top: 40px;
-      padding: 15px;
-    }
+.profil{
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  text-align: center;
+  width: 60%;
+  color: white;
+  justify-content: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.inputContaire{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.inputrecherche{
+  background-color: white;
+  padding: 5px;
+  border-radius: 20px;
+  border: white;
+}
+.Btnrecherche{
+  color: white;
+  margin-left: 10px;
+  background-color: #FF9809;
+  border-radius: 20px;
+  border: #FF9809;
+  padding: 5px;
+  cursor: pointer;
+}
+
+@media (min-width: 700px) { 
+  .title {
+    font-size: 6rem;
   }
-  
+  .btn{
+    width: 40%;
+    margin-top: 40px;
+    padding: 15px;
+  }
+  .inputContaire{
+    flex-direction: row;
+  }
+
+  }  
   @media (min-width: 1200px) { 
     .title {
       font-size: 7rem;
