--- a/frontend/styles/Settings.module.css
+++ b/frontend/styles/Settings.module.css
@@ -121,25 +121,25 @@
   transform: scale(1.4); 
 }
 
-  .btn{
-    background-color: #C9333E;
-    font-size: 22px;
-    font-weight: bolder;
-    color: white;
-    padding: 10px;
-    border-radius: 50px;
-    width: 60%;
-    border: solid #C9333E 1px;
-    margin-top: 30px;
-    box-shadow: 10px 10px 25px 1px rgba(0,0,0,0.82);
-    -webkit-box-shadow: 10px 10px 25px 1px rgba(0,0,0,0.82);
-    -moz-box-shadow: 10px 10px 25px 1px rgba(0,0,0,0.82);
-    cursor: pointer;
-  }
-  .btn:hover{
-    background-color: #E3505A;
-    border: solid #E3505A 1px;
-  }
+.btn{
+  background-color: #C9333E;
+  font-size: 22px;
+  font-weight: bolder;
+  color: white;
+  padding: 10px;
+  border-radius: 50px;
+  width: 60%;
+  border: solid #C9333E 1px;
+  margin-top: 30px;
+  box-shadow: 10px 10px 25px 1px rgba(0,0,0,0.82);
+  -webkit-box-shadow: 10px 10px 25px 1px rgba(0,0,0,0.82);
+  -moz-box-shadow: 10px 10px 25px 1px rgba(0,0,0,0.82);
+  cursor: pointer;
+}
+.btn:hover{
+  background-color: #E3505A;
+  border: solid #E3505A 1px;
+}
 
 .btnLogout {
   background-color: #555563;
@@ -185,8 +185,9 @@
 }
 
 .inputrecherche{
+  margin-top: 10px;
   background-color: white;
-  padding: 5px;
+  padding: 8px;
   border-radius: 20px;
   border: white;
 }
@@ -196,8 +197,11 @@
   background-color: #FF9809;
   border-radius: 20px;
   border: #FF9809;
-  padding: 5px;
+  padding: 8px;
   cursor: pointer;
+}
+.Btnrecherche:hover{
+  background-color: #de9e43;
 }
 
 @media (min-width: 700px) { 
