--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Hey Comic';
+  src: url('../assets/fonts/HeyComicCustom.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "ToastyMilk";
+  src: url('../assets/fonts/Toasty\ Milk.ttf') format('truetype');
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -10,21 +20,23 @@
 
 .title {
   line-height: 1.15;
-  font-size: 4rem;
   color: white;
   margin-bottom: -20px;
-  margin-top: -10%;
+  margin-top: 2%;
   cursor: default;
+  font-family: 'ToastyMilk';
+  font-size: 70px;
 }
 .btn{
   background-color: #C9333E;
-  font-size: 22px;
-  font-weight: bolder;
+  font-family: 'Hey Comic';
+  font-size: 30px;
   color: white;
   padding: 10px;
   border-radius: 50px;
   width: 60%;
   border: solid #C9333E 1px;
+  margin: 5%;
   margin-top: 30px;
   box-shadow: 10px 10px 25px 1px rgba(0,0,0,0.82);
   -webkit-box-shadow: 10px 10px 25px 1px rgba(0,0,0,0.82);
@@ -50,8 +62,8 @@
   margin-left: 50px;
 }
 .displayQuete{
-  margin-left: -50%;
-  margin-top: -5%;
+  margin-left: -80%;
+  margin-top: 10%;
 }
 
 
