--- a/frontend/styles/Quest.module.css
+++ b/frontend/styles/Quest.module.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'Hey Comic';
+  src: url('../assets/fonts/HeyComicCustom.ttf') format('truetype');
+}
 .container {
   background-color: #555563;
   width: 100%;
@@ -8,6 +12,8 @@
   flex-direction: column;
   color: white;
   padding-bottom: 50px;
+  font-family: 'Hey Comic';
+  font-size: 20px;
 }
 .quest{
   background-color: white;
