--- a/frontend/styles/Settings.module.css
+++ b/frontend/styles/Settings.module.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'Hey Comic';
+  src: url('../assets/fonts/HeyComicCustom.ttf') format('truetype');
+}
 .main {
     display: flex;
     flex-direction: column;
@@ -9,10 +13,11 @@
   
   .title {
     line-height: 1.15;
-    font-size: 2rem;
+    font-size: 40px;
     color: white;
     cursor: default;
     margin: 15px;
+    font-family: 'Hey Comic';
   }
 
 .sonores {
@@ -22,6 +27,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Hey Comic';
 }
 
 .cursor {
@@ -85,6 +91,7 @@
     color: #fff;
     font-size: 20px;
     gap: 5px;
+    font-family: 'Hey Comic';
 }
 
 .couleurs {
@@ -124,7 +131,7 @@
   .btn{
     background-color: #C9333E;
     font-size: 22px;
-    font-weight: bolder;
+    font-family: 'Hey Comic';
     color: white;
     padding: 10px;
     border-radius: 50px;
@@ -146,7 +153,7 @@
   border: solid 1px transparent;
   border-radius: 50px;
   font-size: 22px;
-  font-weight: bolder;
+  font-family: 'Hey Comic';
   color: #fff;
   padding: 20px;
   margin-top: 30px;
@@ -169,6 +176,8 @@
 .profil{
   display: flex;
   flex-direction: column;
+  font-family: 'Hey Comic';
+  letter-spacing: 1px;
   font-size: 20px;
   text-align: center;
   width: 60%;
@@ -189,7 +198,9 @@
   padding: 5px;
   border-radius: 20px;
   border: white;
+  font-family: 'Hey Comic';
 }
+
 .Btnrecherche{
   color: white;
   margin-left: 10px;
@@ -198,6 +209,8 @@
   border: #FF9809;
   padding: 5px;
   cursor: pointer;
+  font-family: 'Hey Comic';
+  letter-spacing: 1px;
 }
 
 @media (min-width: 700px) { 
