--- a/frontend/styles/Shop.module.css
+++ b/frontend/styles/Shop.module.css
@@ -11,11 +11,15 @@
     color: #fff;
     font-size: 1.5rem;
     text-align: center;
+    font-family: 'Hey Comic';
+    
 }
 
 .main h2 {
     color: #fff;
-    font-size: 1rem;
+    font-size: 1.5rem;
+    font-family: 'Hey Comic';
+    letter-spacing: 2px;
 }
 
 .title {
@@ -24,6 +28,7 @@
     color: white;
     cursor: default;
     margin: 15px;
+    font-family: 'Hey Comic';
 }
 
 .layout {
@@ -38,7 +43,7 @@
 }
 
 .layout span {
-    color: #fff;
+    color: #131111;
     font-size: 13px;
 }
 
@@ -85,6 +90,7 @@
     align-items: center;
     height: 150px;
     width: 150px;
+    font-family: 'Hey Comic';
 }
 
 .imgItem {
@@ -113,6 +119,8 @@
     align-items: center;
     height: 50px;
     width: 150px;
+    font-family: 'Hey Comic';
+    letter-spacing: 1px;
 }
 
 .KP {
