--- a/frontend/styles/Solo.module.css
+++ b/frontend/styles/Solo.module.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'Hey Comic';
+  src: url('../assets/fonts/HeyComicCustom.ttf') format('truetype');
+}
 .main {
     display: flex;
     flex-direction: column;
@@ -6,14 +10,17 @@
     height: auto;
     min-height: 90vh;
     background-color: #555563;
+    margin-bottom: 50px;
 }
 
 .title {
     line-height: 1.15;
     font-size: 4rem;
     color: white;
-    margin-bottom: -20px;
+    margin-bottom: 20px;
     cursor: default;
+    font-family: 'Hey Comic';
+    font-size: 70px;
 }
 .btn{
     background-color: #C9333E;
@@ -38,15 +45,17 @@
     display: flex;
     justify-content: center;
     background-color: #C9333E;
-    font-size: 22px;
-    font-weight: bolder;
+    font-family: 'Hey Comic';
+    font-size: 30px;
     color: white;
     padding: 5px;
     border-radius:10px;
     width: 70%;
     border: solid #C9333E 1px;
     margin-top: 30px;
+    margin-bottom: 3px;
     cursor: default;
+    letter-spacing: 2px;
 }
 .ListContainer{
     justify-content: center;
@@ -55,6 +64,10 @@
     flex-wrap: wrap;
     height: auto;
     width: 70%;
+    font-family: 'Hey Comic';
+    font-size: 15px;
+    letter-spacing: 2px;
+    margin-bottom: 50px;
 }
 .ListContainerLast{
     justify-content: center;
