--- a/frontend/styles/createGame.module.css
+++ b/frontend/styles/createGame.module.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'Hey Comic';
+  src: url('../assets/fonts/HeyComicCustom.ttf') format('truetype');
+}
 .container {
   background-color: #555563;
   width: 100%;
@@ -8,9 +12,9 @@
   flex-direction: column;
 }
 .button {
-  width: 30%;
+  width: 50%;
   padding: 2%;
-  margin: 2%;
+  margin: 5%;
   border-radius: 20px;
   box-shadow: 15px 15px 25px 1px rgba(0, 0, 0, 0.82);
   -webkit-box-shadow: 15px 15px 25px 1px rgba(0, 0, 0, 0.82);
@@ -18,18 +22,23 @@
   background-color: #FF9809;
   color: white;
   cursor: pointer;
+  font-family: 'Hey Comic';
+  font-size: 25px;
 }
 .container input {
   margin: 1%;
 }
 .create {
   margin-top: 2%;
-  margin-bottom: 5%;
+  margin-bottom: 10%;
   color: white;
+  font-family: 'Hey Comic';
+  font-size: 30px;
 }
 
 .container p {
   color: white;
+  font-family: 'Hey Comic';
 }
 
 
