--- a/frontend/styles/hostJoin.module.css
+++ b/frontend/styles/hostJoin.module.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'Hey Comic';
+  src: url('../assets/fonts/HeyComicCustom.ttf') format('truetype');
+}
 .container {
   background-color: #555563;
   width: 100%;
@@ -17,12 +21,14 @@
   margin-bottom: 80px;
   margin-top: -10%;
   cursor: default;
+  font-family: 'Hey Comic';
+  font-size: 70px;
 }
 
 .button {
   background-color: #C9333E;
-  font-size: 22px;
-  font-weight: bolder;
+  font-family: 'Hey Comic';
+  font-size: 30px;
   color: white;
   padding: 20px;
   border-radius: 50px;
