--- a/frontend/styles/localJoinPage.module.css
+++ b/frontend/styles/localJoinPage.module.css
@@ -1,4 +1,8 @@
-.container{
+@font-face {
+  font-family: 'Hey Comic';
+  src: url('../assets/fonts/HeyComicCustom.ttf') format('truetype');
+}
+  .container{
   background-color: #555563;
   width: 100%;
   height: 100vh;
@@ -11,11 +15,11 @@
     margin: 2%;
     color: white;
     font-size: 22px;
-    font-weight: bolder;
     display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  font-family: 'Hey Comic';
 }
 .btn{
    width: 25%;
@@ -28,11 +32,14 @@
   background-color: #FF9809;
   color: white;
   cursor: pointer;
-  font-size: 22px;
-  font-weight: bolder;
+  font-size: 25px;
+  font-family: 'Hey Comic';
 }
 .container h1 {
   color: white;
+  font-family: 'Hey Comic';
+    font-size: 35px;
+    margin-bottom: 80px;
 }
 .input{
     margin: 10%;
@@ -40,5 +47,6 @@
     border-radius: 5px;
     border: none;
     font-size: 22px; 
+    font-family: 'Hey Comic';
 }
 
