--- a/frontend/styles/userprofile.module.css
+++ b/frontend/styles/userprofile.module.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'Hey Comic';
+  src: url('../assets/fonts/HeyComicCustom.ttf') format('truetype');
+}
 .container{
   background-color: #555563;
   width: 100%;
@@ -14,18 +18,20 @@
     margin: 10px;
     padding: 5px;
     background-color: #dadada;
+    font-family: 'Hey Comic';
+    font-size: 15px;
 
 }
 
 .inputContainer{
     margin: 2%;
     color: white;
-    font-size: 22px;
-    font-weight: bolder;
+    font-family: 'Hey Comic';
+    font-size: 25px;
     display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 .btn{
    width: 25%;
@@ -38,17 +44,20 @@
   background-color: #FF9809;
   color: white;
   cursor: pointer;
-  font-size: 22px;
-  font-weight: bolder;
+  font-family: 'Hey Comic';
+  font-size: 25px;
 }
 .container h1 {
   color: white;
+  font-family: 'Hey Comic';
+  font-size: 50px;
 }
 .input{
     margin: 10%;
     padding: 10px;
     border-radius: 5px;
     border: none;
-    font-size: 22px; 
+    font-size: 20px; 
+    font-family: 'Hey Comic';
 }
 
