--- a/frontend/styles/PlaylistPredefini.module.css
+++ b/frontend/styles/PlaylistPredefini.module.css
@@ -7,16 +7,18 @@
     border: solid 1px black;
     border-radius: 20px;
     width: 130px;
-    background-color: #FF9809;
+    background-color: #8f4ed0;
     cursor: pointer;
     box-shadow: 5px 5px 5px 1px rgba(0,0,0,0.82);
     -webkit-box-shadow: 5px 5px 5px 1px rgba(0,0,0,0.82);
     -moz-box-shadow: 5px 5px 5px 1px rgba(0,0,0,0.82);
 }
-
+.btn image{
+    
+}
 .btn p {
     margin: auto;
-    background-color: #FF9809;
+    background-color: #8f4ed0;
     color: white;
     font-weight: bold;
 }
@@ -24,7 +26,7 @@
     width: 100%;
     margin: 0px;
     color: black;
-    border-color: #FF9809;
+    border-color: #8f4ed0;
 }
 
 .check {
