--- a/frontend/styles/Settings.module.css
+++ b/frontend/styles/Settings.module.css
@@ -11,14 +11,16 @@
     background-color: #555563;
   }
   
-  .title {
-    line-height: 1.15;
-    font-size: 40px;
-    color: white;
-    cursor: default;
-    margin: 15px;
-    font-family: 'Hey Comic';
-  }
+.main h1{
+  font-size: 4rem;
+}
+.title {
+  line-height: 1.15;
+  color: white;
+  cursor: default;
+  margin: 15px;
+  font-family: 'Hey Comic';
+}
 
 .sonores {
     width: 80vw;
@@ -205,16 +207,16 @@
 .Btnrecherche{
   color: white;
   margin-left: 10px;
-  background-color: #FF9809;
+  background-color: #C9333E;
   border-radius: 20px;
-  border: #FF9809;
+  border: #C9333E;
   padding: 8px;
   cursor: pointer;
   font-family: 'Hey Comic';
   letter-spacing: 1px;
 }
 .Btnrecherche:hover{
-  background-color: #de9e43;
+  background-color: #f26500;
 }
 
 @media (min-width: 700px) { 
