--- a/frontend/styles/online.module.css
+++ b/frontend/styles/online.module.css
@@ -48,3 +48,13 @@
   font-size: 16px;
   color: black;
 }
+.backBtn{
+  background-color: #555563;
+  color: white;
+  position: absolute;
+  left: 30px;
+  top: 120px;
+  border: 1px #555563 solid;
+  font-size: 30px;
+  cursor: pointer;
+}
