--- a/frontend/styles/Solo.module.css
+++ b/frontend/styles/Solo.module.css
@@ -78,7 +78,16 @@
     width: 70%;
     margin-bottom: 80px;
 }
-
+.backBtn{
+  background-color: #555563;
+  color: white;
+  position: absolute;
+  left: 30px;
+  top: 120px;
+  border: 1px #555563 solid;
+  font-size: 30px;
+  cursor: pointer;
+}
 
 @media (min-width: 700px) { 
     .ListContainer{
