--- a/frontend/styles/hostJoin.module.css
+++ b/frontend/styles/hostJoin.module.css
@@ -40,3 +40,14 @@
   -moz-box-shadow: 10px 10px 25px 1px rgba(0,0,0,0.82);
   cursor: pointer;
 }
+
+.backBtn{
+  background-color: #555563;
+  color: white;
+  position: absolute;
+  left: 30px;
+  top: 120px;
+  border: 1px #555563 solid;
+  font-size: 30px;
+  cursor: pointer;
+}
