--- a/frontend/styles/localJoinPage.module.css
+++ b/frontend/styles/localJoinPage.module.css
@@ -49,4 +49,13 @@
     font-size: 22px; 
     font-family: 'Hey Comic';
 }
-
+.backBtn{
+  background-color: #555563;
+  color: white;
+  position: absolute;
+  left: 30px;
+  top: 120px;
+  border: 1px #555563 solid;
+  font-size: 30px;
+  cursor: pointer;
+}
