--- a/frontend/styles/login.module.css
+++ b/frontend/styles/login.module.css
@@ -8,14 +8,25 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
+
+.title {
+  line-height: 1.15;
+  color: white;
+  margin-bottom: -20px;
+  margin-top: 2%;
+  cursor: default;
+  font-family: 'ToastyMilk';
+  font-size: 100px;
+  margin-bottom: 50px;
+}
+
 .button {
   width: 50%;
   padding: 2%;
-  margin: 5%;
+  margin-top: 50px;
   border-radius: 50px;
   border: solid #C9333E 1px;
   box-shadow: 10px 10px 25px 1px rgba(0,0,0,0.82);
@@ -121,3 +132,11 @@
 
 
 
+@media (max-width: 1200px) { 
+  .title {
+    margin-top: 50px;
+    font-size: 50px;
+    margin-bottom: 50px;
+  }
+
+}
