--- a/frontend/styles/createGame.module.css
+++ b/frontend/styles/createGame.module.css
@@ -31,6 +31,7 @@
   -webkit-box-shadow: 15px 15px 25px 1px rgba(0, 0, 0, 0.82);
   -moz-box-shadow: 15px 15px 25px 1px rgba(0, 0, 0, 0.82);
   background-color: #E3505A;
+  border: solid #E3505A 1px;
   color: white;
   cursor: pointer;
   font-family: 'Hey Comic';
@@ -46,11 +47,10 @@
   margin: 1%;
 }
 .create {
-  margin-top: 2%;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
   color: white;
   font-family: 'Hey Comic';
-  font-size: 30px;
+  font-size: 70px;
 }
 
 .container p {
@@ -69,3 +69,11 @@
   cursor: pointer;
 }
 
+
+  @media (max-width: 800px) { 
+  .create {
+      font-size: 30px;  
+      width: 80%;
+  }
+
+}
