--- a/frontend/styles/Solo.module.css
+++ b/frontend/styles/Solo.module.css
@@ -94,6 +94,9 @@
     .ListContainer{
         width: 80%;
     }
+    .ListContainerLast{
+        width: 80%;
+    }
 }
 
 @media (min-width: 1200px) { 
@@ -106,6 +109,9 @@
         padding: 15px;
     }
     .ListContainer{
+        width: 50%;
+    }
+        .ListContainerLast{
         width: 50%;
     }
 }
@@ -121,6 +127,9 @@
     .ListContainer{
         width: 50%;
     }
+    .ListContainerLast{
+        width: 50%;
+    }
 }
 
 @media (min-width: 1600px) { 
@@ -133,6 +142,9 @@
         padding: 20px;
     }
     .ListContainer{
+        width: 50%;
+    }
+    .ListContainerLast{
         width: 50%;
     }
 }
