--- a/frontend/styles/game.module.css
+++ b/frontend/styles/game.module.css
@@ -1,7 +1,7 @@
 .container {
   background-color: #555563;
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,6 +62,8 @@
     width: 25%;
   }
 }
+
+
 
 /* Media query pour les tel  */
 @media (max-width: 480px) {
