--- a/frontend/styles/gameSolo.module.css
+++ b/frontend/styles/gameSolo.module.css
@@ -1,7 +1,7 @@
 .main{
     background-color: #555563;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -41,4 +41,32 @@
     border-radius: 10px;
     border: solid 1px black;
 
+}
+
+
+@media (max-width: 600px) {
+    .points{
+    font-size: 20px;
+    }
+    .mancheNb{
+        font-size: 20px;
+    }
+    .vynil{
+        width: 45%;
+    }
+}
+
+@media (max-width: 800px) {
+
+    .vynil{
+        width: 40%;
+    }
+}
+
+
+@media (max-width: 1200px) {
+
+    .vynil{
+        width: 20%;
+    }
 }
