--- a/frontend/styles/gameSolo.module.css
+++ b/frontend/styles/gameSolo.module.css
@@ -23,6 +23,8 @@
     left: 2%; 
 }
 .inputContainer{
+    flex-direction: column;
+    align-items:center ;
     display: flex;
     justify-content: center;
     font-size: 24px;
@@ -42,6 +44,7 @@
     border: solid 1px black;
 
 }
+
 
 
 @media (max-width: 600px) {
